Rework of the dir strucuture. Config now full.

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
 theme: jekyll-theme-slate
+title: Christophe Boutter
+subtitle: 
+author: Christophe Boutter
+simple_search: http://google.com/search
+description: I'm a german agilist, doing Java and dreaming about Ruby.
+email: boutta@gmail.com
