--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,5 @@ author: Christophe Boutter
 simple_search: http://google.com/search
 description: I'm a german agilist, doing Java and dreaming about Ruby.
 email: boutta@gmail.com
+
+name: Christophe Boutter
